HTML in progress, basic CSS done, trying to display datas in DOM before altering it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
     <script src="./js/modules/cards_module.js" type="module"></script>
     <script src="./js/modules/player_module.js" type="module"></script>
 </head>
-<body>
-    
+<body class="container">
+    <div class="nav container">
+        <div id="logo">unMANAGABLE ?</div>
+        <ul class="container">
+            <li>Score</li>
+            <li>Budget</li>
+            <li><span>Play again</span> // <span>Pause</span></li>
+        </ul>
+    </div>
+    <div class="main container">
+        <div id="ministries" class="container"></div>
+        <div id="cardcontainer" class="container">
+            <div class="card"></div>
+            <div class="choices cardcontainer">
+                <div class="yes">Yes</div>
+                <div class="no">No</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
