Logic done from point 1 to 4

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Responsability</title>
+    <title>unMANAGABLE ?</title>
     <script src="./js/main.js" type="module"></script>
     <script src="./js/modules/ministry_module.js" type="module"></script>
     <script src="./js/modules/cards_module.js" type="module"></script>
     <script src="./js/modules/player_module.js" type="module"></script>
 </head>
 <body class="container">
-    <div class="nav container">
+    <div id="nav" class="container">
         <div id="logo">unMANAGABLE ?</div>
         <ul class="container">
-            <li>Score</li>
-            <li>Budget</li>
+            <li >Score : <span id="score"></span></li>
+            <li >Budget : <span id="budget"></span></li>
             <li><span>Play again</span> // <span>Pause</span></li>
         </ul>
     </div>
