done with basic logic but a bug as appeared

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="nav" class="container">
         <div id="logo">unMANAGABLE ?</div>
         <ul class="container">
-            <li >Score : <span id="score"></span></li>
+            <li >Num Of Round : <span id="score"></span></li>
             <li >Budget : <span id="budget"></span></li>
-            <li><span>Play again</span> // <span>Pause</span></li>
+            <li class="againBtn"><span>Play again</span></li>
         </ul>
     </div>
     <div class="main container">
