added music and gif icon to turn it off

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <li >Best Score:  <span id="bestscore"></span></li>
             <li >Num Of Round : <span id="score"></span></li>
             <li class="againBtn"><span>Play again</span></li>
-            <li class="music"><img src="" alt=""></li>
         </ul>
     </div>
     <aside>Budget : $<span id="budget"></span></aside>
@@ -28,7 +27,9 @@
             <div class="gobtn"><h1>GO!!</h1></div>
             <div class="choices cardcontainer"></div>
         </div>
+        <div id="timer"></div>
         <div id="ministries" class="container"></div>
     </div>
+    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src=""></audio></div>
 </body>
 </html>
