timebar feature in progress working on the progressBarEffect function

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
             <li class="againBtn"><span>Play again</span></li>
         </ul>
     </div>
-    <aside>Budget : $<span id="budget"></span></aside>
+    <aside>Budget : $<span id="budget"></span>
+    <br>
+    </aside>
     <div class="main container">
         <div id="cardcontainer" class="container">
             <div class="card"></div>
+            <div class="progress-bar"></div>
             <div class="gobtn"><h1>GO!!</h1></div>
             <div class="choices cardcontainer"></div>
         </div>
