--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="againBtn"><span>Play again</span></li>
         </ul>
     </div>
-    <aside>Budget : $<span id="budget"></span>
+    <aside class="shadow">Budget : $<span id="budget"></span>
     <br>
     </aside>
     <div class="main container">
@@ -30,9 +30,9 @@
             <div class="gobtn"><h1>GO!!</h1></div>
             <div class="choices cardcontainer"></div>
         </div>
-        <div id="timer"></div>
+        <h2 class="shadow">Secretaries</h2>
         <div id="ministries" class="container"></div>
     </div>
-    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src=""></audio></div>
+    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src="./ressources/"></audio></div>
 </body>
 </html>
