--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="container">
     <div id="nav" class="container">
-        <div id="logo">Mr_PRESIDENT</div>
+        <div id="logo">Mr/Ms_PRESIDENT</div>
         <ul class="container">
             <li >Best Score:  <span id="bestscore"></span></li>
             <li >Num Of Round : <span id="score"></span></li>
@@ -33,6 +33,6 @@
         <h2 class="shadow">Secretaries</h2>
         <div id="ministries" class="container"></div>
     </div>
-    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src="./ressources/"></audio></div>
+    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src="./ressources/Pickle Rick! [8 Bit Tribute to Rick and Morty & Chetreo] - 8 Bit Universe.mp3"></audio></div>
 </body>
 </html>
