smaller sceen desktop and Ipad display done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="againBtn"><span>Play again</span></li>
         </ul>
     </div>
-    <aside class="shadow">Budget : $<span id="budget"></span>
+    <aside class="shadow"><span>Budget : $</span><span id="budget"></span>
     <br>
     </aside>
     <div class="main container">
@@ -30,9 +30,10 @@
             <div class="gobtn"><h1>GO!!</h1></div>
             <div class="choices cardcontainer"></div>
         </div>
-        <h2 class="shadow">Secretaries</h2>
+        <h2 class="shadow">Your government:</h2>
         <div id="ministries" class="container"></div>
     </div>
-    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src="./ressources/Pickle Rick! [8 Bit Tribute to Rick and Morty & Chetreo] - 8 Bit Universe.mp3"></audio></div>
+    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src=""></audio></div>
+    <!-- "./ressources/Pickle Rick! [8 Bit Tribute to Rick and Morty & Chetreo] - 8 Bit Universe.mp3" -->
 </body>
 </html>
