game ready for desktop, tablette and smartphone

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
         <h2 class="shadow">Your government:</h2>
         <div id="ministries" class="container"></div>
     </div>
-    <div id="musicIcon"><img  src="./ressources/music0n.gif" alt="music ON gif"><audio autoplay src=""></audio></div>
+    <div id="musicIcon">
+        <div id="sub-music">
+            <img  src="./ressources/music0n.gif" alt="music ON gif">
+            <audio autoplay src="./ressources/Pickle Rick! [8 Bit Tribute to Rick and Morty & Chetreo] - 8 Bit Universe.mp3"></audio>
+            <span>Sound</span>
+        </div>    
+    </div>
+
     <!-- "./ressources/Pickle Rick! [8 Bit Tribute to Rick and Morty & Chetreo] - 8 Bit Universe.mp3" -->
 </body>
 </html>
