added new div for win and loss made it more responsive and userfriendly  on phone

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <aside class="shadow"><span>Budget : $</span><span id="budget"></span>
     <br>
     </aside>
+    <div class="final-div container"></div>
     <div class="main container">
         <div id="cardcontainer" class="container">
             <div class="card"></div>
