added introduction panel when the geme is launche

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <li class="againBtn"><span>Play again</span></li>
         </ul>
     </div>
-    <aside class="shadow"><span>Budget : $</span><span id="budget"></span>
+    <aside class="shadow budget-container"><span>Budget : $</span><span id="budget"></span>
     <br>
     </aside>
-    <div class="final-div container"></div>
+    <div class="info-div container"></div>
     <div class="main container">
         <div id="cardcontainer" class="container">
             <div class="card"></div>
@@ -41,7 +41,8 @@
             <span>Sound</span>
         </div>    
     </div>
-
     <!-- "./ressources/Pickle Rick! [8 Bit Tribute to Rick and Morty & Chetreo] - 8 Bit Universe.mp3" -->
+
 </body>
 </html>
+
