--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Mr_President?</title>
+    <title>Mr/Ms_PRESIDENT</title>
     <script src="./js/main.js" type="module"></script>
     <script src="./js/modules/ministry_module.js" type="module"></script>
     <script src="./js/modules/cards_module.js" type="module"></script>
