fixed few bugs and made go button more visible

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="cardcontainer" class="container">
             <div class="card"></div>
             <div class="progress-bar"></div>
-            <div class="gobtn"><h1>GO!!</h1></div>
+            <div class="gobtn shake-horizontal"><h1>GO!!</h1></div>
             <div class="choices cardcontainer"></div>
         </div>
         <h2 class="shadow">Your government:</h2>
